--- a/views/game.html
+++ b/views/game.html
@@ -94,6 +94,7 @@
       .loading_content p{
         font-size:1.35em;
         margin-top:5px;
+        text-align:center;
       }
       .msg_left{
             padding:15px;
