--- a/views/home.html
+++ b/views/home.html
@@ -81,12 +81,29 @@
             right:10px;
             font-size:1.2em;
         }
+        body::after{
+            background:black;
+            content:'Версия для компьютеров недоступна.';
+            font-family:'Proxima';
+            font-size:1.4em;
+            color:white;
+            width:100%;
+            height:100%;
+            top:0;
+            left:0;
+            position:fixed;
+            text-align:center;
+            line-height: 75vh;
+        }
         @media(max-width:480px){
             .room_form{
                 all:unset;
             }
             body{
                 padding:0 7vw;
+            }
+            body::after{
+                all:unset;
             }
         }
         .msg_error{
@@ -129,38 +146,50 @@ top:8px;
         top:-50vh;
     }
 }
-.qr_all{
-    display:none;
-}
 .qr_camera{
     background: white;
-    border-radius: 25px;
-    padding: 20px;
-    width: 80vw;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    padding: 30px;
+    width: 100vw;
     height: auto;
-    left: 10vw;
-top:10vh;
+    left: 0;
+    bottom:-100vh;
     position: fixed;
-
+padding-bottom:15px;
+z-index:3;
+opacity:0;
+transition: bottom 0.6s, opacity 0.8s;
+}
+.qr_camera.shown{
+bottom:0;
+opacity:1;
 }
 .qr_preview_c{
-    width: calc(80vw - 40px);
+    width: calc(100vw - 60px);
     overflow: hidden;
-    height: calc(80vw - 40px);
+    height: calc(100vw - 60px);
     border-radius: 20px;
 }
 .qr_bg{
-            background:rgba(0,0,0,0.35);
+    opacity:0;
+            background:rgba(0,0,0,0.4);
             width:100vw;
             height:100vh;
             position:fixed;
             top:0;
             left:0;
+            z-index:-1;
+            transition:opacity 0.8s, z-index 0.6s;
+        }
+        .qr_bg.shown{
+            opacity:1;
+            z-index:2;
         }
         #qr_preview{
             width: 150vw;
     margin-left: -30vw;
-    margin-top: -60%;
+/*    margin-top: -60%;*/
         }
         .qr_close{
             width:fit-content;
@@ -197,14 +226,12 @@ margin-left:2px;
     
 </head>
 <body>
-    <div class="qr_all">
     <div class="qr_bg"></div>
     <div class="qr_camera">
         
        <div class="qr_preview_c"> <video id="qr_preview" autoplay="autoplay" class="active" style="transform: scaleX(-1);"></video></div>
        <div class="qr_close"><button>Закрыть<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="times" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 352 512" class="svg-inline--fa fa-times fa-w-11 fa-3x"><path fill="currentColor" d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z" class=""></path></svg></button></div>
     </div>
-</div>
     <div class="msg_error"><svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path fill="#F34949" d="M21.7,7.6l-5.3-5.3C16.2,2.1,16,2,15.7,2H8.3C8,2,7.8,2.1,7.6,2.3L2.3,7.6C2.1,7.8,2,8,2,8.3v7.5c0,0.3,0.1,0.5,0.3,0.7l5.3,5.3C7.8,21.9,8,22,8.3,22h7.5c0.3,0,0.5-0.1,0.7-0.3l5.3-5.3c0.2-0.2,0.3-0.4,0.3-0.7V8.3C22,8,21.9,7.8,21.7,7.6z M12,17c-0.6,0-1-0.4-1-1s0.4-1,1-1s1,0.4,1,1S12.6,17,12,17z M13,12c0,0.6-0.4,1-1,1s-1-0.4-1-1V8c0-0.6,0.4-1,1-1s1,0.4,1,1V12z"/></svg><p></p></div>
     <div class="room_form">
     <input type="text" name="username" placeholder="Ваше имя">
@@ -231,6 +258,7 @@ else if(location.search.includes('?error')){
     msg_error.style.display = 'flex';
 window.history.pushState(null,'Главная','/')
 }
+
         document.querySelector('.go_room').onclick = ()=>{
             document.querySelector('.nocode').innerText = '';
             document.querySelector('.nameexists').innerText = '';
@@ -282,19 +310,25 @@ document.querySelector('.nameexists').innerText = 'Ошибка имени.';
     </script>
     <script type="module">
         import QrScanner from './node_modules/qr-scanner/qr-scanner.min.js';
+        
+    QrScanner.WORKER_PATH = 'node_modules/qr-scanner/qr-scanner-worker.min.js';
+    document.querySelector('#qr_preview').addEventListener("change",function(){alert('changed')});
    const qr = new QrScanner(document.querySelector('#qr_preview'), function(result){
        if(result.length == 6 && result == result.toUpperCase() && !/\d/.test(result)){
 location.href = `/room?roomId=${result}&name=test`;
        }
     });
-      const qrElem = document.querySelector('.qr_all');
+    
+    qr.start();
+      const qrElem1 = document.querySelector('.qr_camera');
+      const qrElem2 = document.querySelector('.qr_bg');
         document.querySelector('.qr_close button').onclick = function(){
-            qrElem.style.display = 'none';
-            qr.stop();
+            qrElem1.classList.remove('shown');
+            qrElem2.classList.remove('shown');
         }
         document.querySelector('.qr_sign').onclick = function(){
-            qrElem.style.display = 'block';
-            qr.start();
+            qrElem1.classList.add('shown');
+            qrElem2.classList.add('shown');
         }
       
     </script>
