--- a/views/home.html
+++ b/views/home.html
@@ -189,7 +189,7 @@ opacity:1;
         #qr_preview{
             width: 150vw;
     margin-left: -30vw;
-/*    margin-top: -60%;*/
+margin-top: -60%;
         }
         .qr_close{
             width:fit-content;
