--- a/views/home.html
+++ b/views/home.html
@@ -156,7 +156,11 @@ top:8px;
     left: 0;
     bottom:-100vh;
     position: fixed;
-padding-bottom:15px;
+padding-bottom:15px;-webkit-transform: translateZ(0);
+-moz-transform: translateZ(0);
+-ms-transform: translateZ(0);
+-o-transform: translateZ(0);
+transform: translateZ(0);
 z-index:3;
 opacity:0;
 transition: bottom 0.75s, opacity 0.95s;
