--- a/views/home.html
+++ b/views/home.html
@@ -165,7 +165,11 @@ z-index:3;
 opacity:0;
 animation-fill-mode:forwards;
 }
-@keyframes slide{
+
+.qr_camera.shown{
+animation:slide .9s;
+animation-fill-mode:forwards;
+}@keyframes slide{
 0%{
 opacity:0;
 bottom:-100vh;
@@ -178,9 +182,6 @@ opacity:0.7;
 bottom:0;
 opacity:1:
 }
-}
-.qr_camera.shown{
-animation:slide .9s;
 }
 .qr_preview_c{
     width: calc(100vw - 60px);
