--- a/views/home.html
+++ b/views/home.html
@@ -171,10 +171,11 @@ bottom:0;
 opacity:1;
 }
 .qr_preview_c{
-    width: calc(90vw - 60px);
+    width: calc(95vw - 60px);
     overflow: hidden;
-margin:0 5vw;
-    height: calc(90vw - 60px);
+margin:2.5vw;
+margin-bottom:0;
+    height: calc(95vw - 60px);
     border-radius: 20px;
 }
 .qr_bg{
