--- a/views/home.html
+++ b/views/home.html
@@ -174,7 +174,7 @@ opacity:1;
     width: calc(96.5vw - 60px);
     overflow: hidden;
 margin:1.75vw;
-margin-bottom:calc(1.75vw + 30px);
+margin-bottom:15px;
     height: calc(96.5vw - 60px);
     border-radius: 20px;
 }
