--- a/views/room.html
+++ b/views/room.html
@@ -32,21 +32,27 @@
             margin:0;
         }
         header{
+            border-bottom:4px solid rgba(0,0,0,0.05);
             width:100%;
             padding:20px;
+            display:flex;
+            justify-content: space-between;
+            align-items: center;
         }
         .logo{
-            width:50px;
-            height:50px;
+            width:45px;
+            height:45px;
         }
         .logo img{
-            width:50px;
-            height:50px;
+            width:45px;
+            height:45px;
         }
         .players-count{
-            font-size:3em;
+            font-size:3.6em;
             color:#7373ea;
+            line-height: 50px;
             
+    margin: 20px 0 0 0;
             text-align:center;
         }
         .startgame button{
@@ -56,7 +62,7 @@
             padding:10px;
             color:white;
             font-family:'Proxima';
-            margin-top:11px;
+            margin-top:5px;
             font-size:1em;
         }
         .startgame p{
@@ -67,20 +73,8 @@
             height:auto;
             margin:auto;
         }
-        div[data-option="quit"] .leave, button[data-option="deleteroom"]{
-border-radius:10px;
-color:white;
-font-size:1.1em;
-border:none;
-padding:12px 10px;
-font-family:'Proxima';
-        }
-        div[data-option="quit"]{
-            width:fit-content;
-            height:auto;
-            margin:auto;
-        }
-        div[data-option="quit"] .leave svg, button[data-option="deleteroom"] svg, .startgame button svg{
+       
+      .startgame button svg{
             width:25px;
             height:25px;
         }
@@ -88,23 +82,12 @@ font-family:'Proxima';
             vertical-align: -0.5em;
             margin-left:3px;
         }
-        div[data-option="quit"] .leave svg, button[data-option="deleteroom"] svg{
-            vertical-align: bottom;
-        }
-        div[data-option="quit"] .leave{
-            background:#7373ea;
-        }
-        button[data-option="deleteroom"]{
-            background:#f34949;
-            margin-left:10px;
-        }
+        
         .countdown{
             font-size:1.7em;
             text-align:center;
-            margin-top:-5px;
             
     font-family: 'Montserrat';
-            margin-bottom: 3px;
         }
         .qrcode{
             width: 80vw;
@@ -189,14 +172,38 @@ height:25px;
 vertical-align:-0.45em;
 margin-left:2px;
 }
+.header_icons{
+    display:flex;
+    height:40px;
+    list-style-type: none;
+    margin:0;
+}
+.header_icons li{
+    margin-left:7px;
+   
+}
+
+.header_icons li svg{
+    width:40px;
+    background:#7373ea;
+    padding:8px;
+    border-radius:50px;
+    vertical-align: middle;
+    height:40px;
+    margin-left:0.5px;
+}
         </style>
 </head>
 <body>
-    <!--<header>
+   <header>
         <div class="logo">
             <img src="l.png">
         </div>
-    </header>-->
+        <ul class="header_icons">
+            <li><svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path fill="#FFFFFF" d="M8.5,11.5c2.2,0,4-1.8,4-4s-1.8-4-4-4s-4,1.8-4,4S6.3,11.5,8.5,11.5z M13,10.6c1.7,1.4,4.2,1.1,5.6-0.6C20,8.3,19.7,5.8,18,4.4c-0.7-0.6-1.6-0.9-2.5-0.9c-0.9,0-1.8,0.3-2.5,0.9c1.7,1.4,2,3.8,0.6,5.6C13.5,10.2,13.2,10.4,13,10.6z M22.9,19.4c-0.6-3.7-3.7-6.4-7.4-6.4c-0.9,0-1.7,0.1-2.5,0.4c2.6,0.9,4.5,3.2,4.9,5.9c0.1,0.5-0.3,1.1-0.9,1.1c0,0-0.1,0-0.1,0h5c0.6,0,1-0.4,1-1C22.9,19.5,22.9,19.4,22.9,19.4z M8.5,13c-3.7,0-6.9,2.7-7.4,6.4c-0.1,0.5,0.3,1.1,0.9,1.1c0,0,0.1,0,0.1,0h12.8c0.6,0,1-0.4,1-1c0,0,0-0.1,0-0.1C15.4,15.7,12.2,13,8.5,13z"/></svg></li>
+            <a href="/"><li><svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path fill="white" d="M13.8,15.3c0.4,0.4,0.4,1,0,1.4c-0.4,0.4-1,0.4-1.4,0c0,0,0,0,0,0l-4-4c-0.4-0.4-0.4-1,0-1.4c0,0,0,0,0,0l4-4c0.4-0.4,1-0.4,1.4,0c0.4,0.4,0.4,1,0,1.4L11.5,11H22c-0.6-5.5-5.5-9.5-10.9-8.9C5.6,2.6,1.5,7.5,2.1,13c0.6,5.5,5.5,9.5,10.9,8.9c4.7-0.5,8.5-4.2,8.9-8.9H11.5L13.8,15.3z"></path></svg></li></a>
+        </ul>
+    </header>
     <div class="qrcode_container"><div class="qr_bg"></div>
         
     <div class="qrcode">
@@ -214,8 +221,7 @@ margin-left:2px;
     <p class="nosuchroom"></p>
     <p data-option="mode"></p>
     <div class="users"></div>
-    <div data-option="quit">
-        <a href="/"><button class="leave"><svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path fill="#FFFFFF" d="M13.8,15.3c0.4,0.4,0.4,1,0,1.4c-0.4,0.4-1,0.4-1.4,0c0,0,0,0,0,0l-4-4c-0.4-0.4-0.4-1,0-1.4c0,0,0,0,0,0l4-4c0.4-0.4,1-0.4,1.4,0c0.4,0.4,0.4,1,0,1.4L11.5,11H22c-0.6-5.5-5.5-9.5-10.9-8.9C5.6,2.6,1.5,7.5,2.1,13c0.6,5.5,5.5,9.5,10.9,8.9c4.7-0.5,8.5-4.2,8.9-8.9H11.5L13.8,15.3z"/></svg></button></a></div>
+
             <div class="qr_btn_container"><button>Показать QR<svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path fill="white" d="M8,21H4c-0.6,0-1-0.4-1-1v-4c0-0.6-0.4-1-1-1s-1,0.4-1,1v4c0,1.7,1.3,3,3,3h4c0.6,0,1-0.4,1-1S8.6,21,8,21z M22,15c-0.6,0-1,0.4-1,1v4c0,0.6-0.4,1-1,1h-4c-0.6,0-1,0.4-1,1s0.4,1,1,1h4c1.7,0,3-1.3,3-3v-4C23,15.4,22.6,15,22,15z M20,1h-4c-0.6,0-1,0.4-1,1s0.4,1,1,1h4c0.6,0,1,0.4,1,1v4c0,0.6,0.4,1,1,1h0c0.6,0,1-0.4,1-1V4C23,2.3,21.7,1,20,1z M2,9L2,9c0.6,0,1-0.4,1-1V4c0-0.6,0.4-1,1-1h4c0.6,0,1-0.4,1-1S8.6,1,8,1H4C2.3,1,1,2.3,1,4v4C1,8.6,1.4,9,2,9z M10,5H6C5.4,5,5,5.4,5,6v4c0,0.6,0.4,1,1,1h4c0.6,0,1-0.4,1-1V6C11,5.4,10.6,5,10,5z M14,11h4c0.6,0,1-0.4,1-1V6c0-0.6-0.4-1-1-1h-4c-0.6,0-1,0.4-1,1v4C13,10.6,13.4,11,14,11z M10,13H6c-0.6,0-1,0.4-1,1v4c0,0.6,0.4,1,1,1h4c0.6,0,1-0.4,1-1v-4C11,13.4,10.6,13,10,13z M14,16L14,16c0.6,0,1-0.4,1-1c0.6,0,1-0.4,1-1s-0.4-1-1-1h-1c-0.6,0-1,0.4-1,1v1C13,15.6,13.4,16,14,16z M18,13c-0.6,0-1,0.4-1,1v3c-0.6,0-1,0.4-1,1s0.4,1,1,1h1c0.6,0,1-0.4,1-1v-4C19,13.4,18.6,13,18,13z M14,17c-0.6,0-1,0.4-1,1s0.4,1,1,1s1-0.4,1-1S14.6,17,14,17z"/></svg></button></div>
     <script src="/socket.io/socket.io.js"></script>
     <script>
@@ -276,11 +282,11 @@ socket.on('get permissions',data => {
     if(data){
     player.isCreator = true;
     document.querySelector('.startgame').innerHTML = `<p>или</p><button><span style="padding-top: 3px;">Начать сейчас</span><svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path fill="white" d="M18.5,9L8.9,3.5C8.4,3.2,7.8,3,7.2,3C5.3,3,3.8,4.5,3.8,6.4v11.2c0,1.9,1.5,3.4,3.4,3.4c0.6,0,1.2-0.2,1.7-0.5l9.7-5.6c0.5-0.3,0.9-0.7,1.2-1.2C20.7,12.1,20.2,10,18.5,9z"/></svg></button>`;
-    document.querySelector('div[data-option="quit"]').innerHTML = `<a href="/"><button class="leave"><svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path fill="#FFFFFF" d="M13.8,15.3c0.4,0.4,0.4,1,0,1.4c-0.4,0.4-1,0.4-1.4,0c0,0,0,0,0,0l-4-4c-0.4-0.4-0.4-1,0-1.4c0,0,0,0,0,0l4-4c0.4-0.4,1-0.4,1.4,0c0.4,0.4,0.4,1,0,1.4L11.5,11H22c-0.6-5.5-5.5-9.5-10.9-8.9C5.6,2.6,1.5,7.5,2.1,13c0.6,5.5,5.5,9.5,10.9,8.9c4.7-0.5,8.5-4.2,8.9-8.9H11.5L13.8,15.3z"/></svg></button></a><button data-option="deleteroom"><svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path fill="white" d="M20,6h-4V5c0-1.7-1.3-3-3-3h-2C9.3,2,8,3.3,8,5v1H4C3.4,6,3,6.4,3,7s0.4,1,1,1h1v11c0,1.7,1.3,3,3,3h8c1.7,0,3-1.3,3-3V8h1c0.6,0,1-0.4,1-1S20.6,6,20,6z M10,5c0-0.6,0.4-1,1-1h2c0.6,0,1,0.4,1,1v1h-4V5z M11,17c0,0.6-0.4,1-1,1s-1-0.4-1-1v-6c0-0.6,0.4-1,1-1s1,0.4,1,1V17z M15,17c0,0.6-0.4,1-1,1s-1-0.4-1-1v-6c0-0.6,0.4-1,1-1s1,0.4,1,1V17z"/></svg></button>`;
+    document.querySelector('.header_icons').innerHTML = `<li><svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path fill="white" d="M20.3,12.7c-0.3-0.4-0.3-0.9,0-1.3l1.3-1.4c0.3-0.3,0.3-0.8,0.1-1.2l-2-3.5c-0.2-0.4-0.6-0.6-1.1-0.5l-1.9,0.4c-0.5,0.1-1-0.2-1.1-0.7l-0.6-1.8C14.8,2.3,14.4,2,14,2h-4C9.6,2,9.2,2.3,9.1,2.7L8.4,4.5C8.3,5,7.8,5.3,7.3,5.2L5.4,4.8C5,4.7,4.6,4.9,4.3,5.3l-2,3.5C2.1,9.1,2.2,9.6,2.5,9.9l1.3,1.4c0.3,0.4,0.3,0.9,0,1.3l-1.3,1.4c-0.3,0.3-0.3,0.8-0.1,1.2l2,3.5c0.2,0.4,0.6,0.6,1.1,0.5l1.9-0.4c0.5-0.1,1,0.2,1.1,0.7l0.6,1.8C9.2,21.7,9.6,22,10,22h4c0.4,0,0.8-0.3,0.9-0.7l0.6-1.8c0.2-0.5,0.7-0.8,1.1-0.7l1.9,0.4c0.4,0.1,0.9-0.1,1.1-0.5l2-3.5c0.2-0.4,0.2-0.8-0.1-1.2L20.3,12.7z M12,15c-1.7,0-3-1.3-3-3s1.3-3,3-3s3,1.3,3,3S13.7,15,12,15z"/></svg></li><li data-option="deleteroom"><svg xmlns="http://www.w3.org/2000/svg" style="background:#f34949" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path fill="white" d="M20,6h-4V5c0-1.7-1.3-3-3-3h-2C9.3,2,8,3.3,8,5v1H4C3.4,6,3,6.4,3,7s0.4,1,1,1h1v11c0,1.7,1.3,3,3,3h8c1.7,0,3-1.3,3-3V8h1c0.6,0,1-0.4,1-1S20.6,6,20,6z M10,5c0-0.6,0.4-1,1-1h2c0.6,0,1,0.4,1,1v1h-4V5z M11,17c0,0.6-0.4,1-1,1s-1-0.4-1-1v-6c0-0.6,0.4-1,1-1s1,0.4,1,1V17z M15,17c0,0.6-0.4,1-1,1s-1-0.4-1-1v-6c0-0.6,0.4-1,1-1s1,0.4,1,1V17z"></path></svg></li><a href="/"><li><svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path fill="white" d="M13.8,15.3c0.4,0.4,0.4,1,0,1.4c-0.4,0.4-1,0.4-1.4,0c0,0,0,0,0,0l-4-4c-0.4-0.4-0.4-1,0-1.4c0,0,0,0,0,0l4-4c0.4-0.4,1-0.4,1.4,0c0.4,0.4,0.4,1,0,1.4L11.5,11H22c-0.6-5.5-5.5-9.5-10.9-8.9C5.6,2.6,1.5,7.5,2.1,13c0.6,5.5,5.5,9.5,10.9,8.9c4.7-0.5,8.5-4.2,8.9-8.9H11.5L13.8,15.3z"></path></svg></li></a>`;
         document.querySelector('.startgame button').onclick = ()=>{
             socket.emit('start game',{id:player.socketId,room:roomId});
         }
-        document.querySelector('button[data-option="deleteroom"]').onclick = ()=>{
+        document.querySelector('li[data-option="deleteroom"]').onclick = ()=>{
             console.log('qew')
             socket.emit('delete room',{id:player.socketId,room:roomId});
         }}
@@ -369,7 +375,6 @@ document.querySelector('span[data-option="playersCount1"]').innerText = data.len
             }
         }
     })
-    //document.querySelector('#qrcode img').setAttribute('src','https://qr.eletto.dev/'+roomId)
     let qrcode = new QRCode("#qrcode");
     qrcode.makeCode(roomId);
     let qrcontainer = document.querySelector('.qrcode_container');
