--- a/views/create.html
+++ b/views/create.html
@@ -268,7 +268,7 @@ header{
   top:0;
   left:0;
   width:100%;
-  padding:15px;
+  padding:15px 0;
   padding-bottom:7px;
   background:inherit;
   justify-content: space-between;
@@ -277,6 +277,7 @@ header{
 header button{
   border-radius:10px;
   padding:5px;
+border:none;
   font-family: 'Euclid';
   background:white;
   font-size:0.9em;
