--- a/views/create.html
+++ b/views/create.html
@@ -313,7 +313,7 @@ header button svg{
 <body>
   <header>
     <button>Назад<svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path fill="#8B5FE9" d="M11.3,12l3.5-3.5c0.4-0.4,0.4-1,0-1.4c-0.4-0.4-1-0.4-1.4,0l-4.2,4.2l0,0c-0.4,0.4-0.4,1,0,1.4l4.2,4.2c0.2,0.2,0.4,0.3,0.7,0.3l0,0c0.3,0,0.5-0.1,0.7-0.3c0.4-0.4,0.4-1,0-1.4L11.3,12z"/></svg></button>
-    <div class="categories"><a style="background:#1bb865" href="#main">Основное</a><a style="background:#1b2fea" href="#map">Карта</a></div>    
+    <div class="categories"><a style="background:#1bb865" href="#main">Основное</a><a style="background:#5865e0" href="#map">Карта</a></div>    
   </header>  
      <input type="text" class="basic_input enter_name" placeholder="Ваше имя">
         <p>Код комнаты:</p>
@@ -384,7 +384,7 @@ header button svg{
     <p>мпр:
         <input id="s1" type="checkbox" class="switch"></p>
         <p style="margin-top:10px">Число игроков (макс. 10):&nbsp;&nbsp;<input type="number" class="basic_input players_count" value="3"></p>
-        <p class="category" style="background:#1b2fea;">Карта</p>
+        <p class="category" style="background:#5865e0;">Карта</p>
         <p>Размер зоны (макс. 250):&nbsp;&nbsp;<input type="number" class="basic_input zone_radius" value="50"></p>
         <p style="margin-top:5px;font-size:1.3em">Центр:</p>
         <div id="map"></div>
